test_case/rust-lang_rust/53748_416404317_44.rs
\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/no-implicit-prelude-nested.rs","byte_start":1633,"byte_end":1641,"line_start":36,"line_end":36,"column_start":10,"column_end":18,"is_primary":true,"text":[{"text":"    impl ToString for Test {} //~ ERROR cannot find trait `ToString` in this scope","highlight_start":10,"highlight_end":18}],"label":"not found in this scope","suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[{"message":"possible candidates are found in other modules, you can import them into scope","code":null,"level":"help","spans":[{"file_name":"/checkout/src/test/ui/no-implicit-prelude-nested.rs","byte_start":819,"byte_end":819,"line_start":19,"line_end":19,"column_start":5,"column_end":5,"is_primary":true,"text":[{"text":"    mod baz {","highlight_start":5,"highlight_end":5}],"label":null,"suggested_replacement":"use std::prelude::v1::ToString;\n\n","suggestion_applicability":"Unspecified","expansion":null},{"file_name":"/checkout/src/test/ui/no-implicit-prelude-nested.rs","byte_start":819,"byte_end":819,"line_start":19,"line_end":19,"column_start":5,"column_end":5,"is_primary":true,"text":[{"text":"    mod baz {","highlight_start":5,"highlight_end":5}],"label":null,"suggested_replacement":"use std::string::ToString;\n\n","suggestion_applicability":"Unspecified","expansion":null}],"children":[],"rendered":null}],"rendered":"error[E0405]: cannot find trait `ToString` in this scope\n  --> /checkout/src/test/ui/no-implicit-prelude-nested.rs:36:10\n   |\nLL |     impl ToStr       ^^^^^^ not found in this scope\n\n"}
[00:47:57] {"message":"cannot find function `drop` in this scope","code":{"code":"E0425","explanation":"\nAn unresolved name was used.\n\nErroneous code examples:\n\n